Test html styling in quiz text

--- a/example-refactored.html
+++ b/example-refactored.html
@@ -9,7 +9,7 @@
       answers: {
         a: "Superman",
         b: "The Terminator",
-        c: "Pippi, obviously"
+        c: "<i>Pippi</i>, <code>obviously</code>"
       },
       correctAnswer: "c"
     },
